--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-numpy>=1.21.0
-pandas>=1.3.0
-matplotlib>=3.4.0
+# Updated Core Dependencies (validated with your setup)
+numpy==1.26.4
+pandas==2.2.3
+matplotlib==3.10.3
+click==8.2.1
+pytest==8.4.1
